--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.Header {
+  width: 100%;
+  background-color: rgb(216, 216, 216);
+  position: fixed;
+  z-index:5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.grid-container {
+  width: 100%;
+  display: grid;
+  position: relative;
+  top: 100px;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: 50px 50px 1fr;
+  grid-column-gap: 5px;
+
 }
 
-.App-link {
-  color: #09d3ac;
+.adder {
+  grid-area: 2 / 1 / 3 / 6 ;
+}
+
+.num-students {
+  grid-area: 1 / 1 / 2 / 6;
+}
+
+.student-block {
+  background-color: hotpink;
 }
